# karakeep-sync

./: .dockerignore  Cargo.toml  DOCKER_README.md  Dockerfile  LICENCE  README.md  REDDIT_REFRESH_TOKEN.md  docker-compose.yml
.github/: funding.yml
.github/workflows/: docker.yml  test.yml
crates/hnscraper/: Cargo.toml
crates/hnscraper/src/: lib.rs
crates/karakeep-client/: Cargo.toml
crates/karakeep-client/src/: lib.rs
crates/karakeep-sync/: Cargo.toml
crates/karakeep-sync/src/: hn.rs  karakeep.rs  main.rs  settings.rs
crates/reddit-client/: Cargo.toml
crates/reddit-client/src/: lib.rs
crates/sync/src/: hn.rs  karakeep.rs  main.rs  plugin.rs  settings.rs
crates/sync/src/plugin/: github_stars.rs  hn_upvotes.rs  pinboard.rs  reddit_saves.rs
src/: main.rs
