[workspace]
members = ["crates/hnscraper", "crates/karakeep-sync"]
resolver = "3"


[workspace.dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
# dev dependencies
tokio-test = "0.4"
wiremock = "0.6"
