[package]
name = "hnscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
scraper = "0.24.0"
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
